--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -53,10 +53,10 @@ pages:
       unforced: 
       content: Wählen Sie
       showWaveform: true
-      enableLooping: false
+      enableLooping: true
       reference: configs/resources/audio/kennedy_moon.wav
       stimuli:
-        C1: configs/resources/audio/kennedy_moon.wav
+        C1: configs/resources/audio/biden_moon.wav
     - type: bs1116
       id: bs1116_nowav
       name: BS 11.16 test
@@ -74,12 +74,12 @@ pages:
       content: This is a MUSHRA page with enabled looping and waveform but without anchors.
       showWaveform: true
       enableLooping: true 
-      reference: configs/resources/audio/kennedy_moon.wav
+      reference: configs/resources/audio/trump_lowest.wav
       createAnchor35: false
       createAnchor70: false
       stimuli:
-        C1: configs/resources/audio/kennedy_moon.wav
-        C2: configs/resources/audio/kennedy_moon.wav
+        C1: configs/resources/audio/biden_lowest.wav
+        C2: configs/resources/audio/female_lowest.wav
     - type: finish
       name: Fast fertig!
       content: Bitte füllen Sie das folgende Formular aus, um das Experiment abzuschließen.
